<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.messagesender2014.MainActivity$PlaceholderFragment" >

	<LinearLayout 
	android:id="@+id/bar1"    
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal">
    <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="0dip"
        android:ems="10"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/bar2"
	    android:layout_width="match_parent"
	    android:layout_height="70dp"
	    android:layout_below="@+id/bar1"	    
	    android:orientation="horizontal" >
    
    	<Button    	    
        	android:id="@+id/btnCapture"  
        	android:layout_width="90dp"
        	android:layout_height="wrap_content"
        	android:text="@string/button_camera" 
        	android:onClick="takePicture"/>

		<Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/button_preview"
            android:onClick="preview" />        
        
		<Button 
		    android:id="@+id/btnShowLocation"
    		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
        	android:text="@string/button_gps"        	
        	android:layout_marginLeft="10dp"
        	android:onClick="getLocation" >    
		</Button>
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/bar3"
	    android:layout_width="match_parent"
	    android:layout_height="70dp"
	    android:layout_below="@+id/bar2"	    
	    android:orientation="horizontal" >    
    	

		<Button
		    android:id="@+id/btnSendToDB"  
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/button_to_DB"
            android:onClick="sendToDB" />        
        
		<Button
		    android:id="@+id/btnFromDb"  
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/button_from_DB"
            android:onClick="getFromDB" />   
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/bar4"
	    android:layout_width="match_parent"
	    android:layout_height="70dp"
	    android:layout_below="@+id/bar3"	    
	    android:orientation="horizontal">    
    	

		<Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/button_upload"
            android:onClick="sendToServer" />        
        
		
	</LinearLayout>

</RelativeLayout>
